[PowerStatus] Avoid crashes on exit when Info window is opened

* Fixes #10885